--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Curso Flexbox</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Twitter</title>
+
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="app">
-      <div class="box red"></div>
-      <div class="box green"></div>
-      <div class="box blue"></div>
-    </div>
+    
   </body>
 </html>
